@@ -3,13 +3,13 @@ dnl  Configuration input file for Squid
 dnl
 dnl  Duane Wessels, wessels@nlanr.net, February 1996 (autoconf v2.9)
 dnl
-dnl  $Id: configure.in,v 1.63 1997/01/03 22:59:08 wessels Exp $
+dnl  $Id: configure.in,v 1.64 1997/01/07 20:05:33 wessels Exp $
 dnl
 dnl
 dnl
 AC_INIT(src/main.c)
 AC_CONFIG_HEADER(include/autoconf.h)
-AC_REVISION($Revision: 1.63 $)dnl
+AC_REVISION($Revision: 1.64 $)dnl
 AC_PREFIX_DEFAULT(/usr/local/squid)
 AC_CONFIG_AUX_DIR(aux)
 
@@ -322,19 +322,23 @@ AC_CHECK_FUNCS(\
 
 AC_MSG_CHECKING(if GNUregex needs to be compiled)
 if test "$ac_cv_func_regcomp" = "no" ; then
-	COMPILE_GNUREGEX="yes"
+	USE_GNUREGEX="yes"
 else
-	COMPILE_GNUREGEX="no"
+	USE_GNUREGEX="no"
 fi
 case "$host" in
 	[*-sun-solaris2.[0-4]])
-	COMPILE_GNUREGEX="yes"
-	;;
+		USE_GNUREGEX="yes"
+		;;
+	[*-next-nextstep*])
+		USE_GNUREGEX="yes"
+		;;
 esac
-AC_MSG_RESULT($COMPILE_GNUREGEX)
-if test "$COMPILE_GNUREGEX" = "yes"; then
+AC_MSG_RESULT($USE_GNUREGEX)
+if test "$USE_GNUREGEX" = "yes"; then
 	REGEXLIB="-lregex"
 	LIBREGEX="libregex.a"
+	AC_DEFINE(USE_GNUREGEX)
 fi
 AC_SUBST(REGEXLIB)
 AC_SUBST(LIBREGEX)
