@@ -1,3 +1,6 @@
+	- Created USE_GNUREGEX define to fix forcing GNU regex on 
+	  Solaris and NeXTStep.
+
 Changes to squid-1.1.3 (January 7, 1997):
 
 	- Changed inet_addr("X") to inet_addr("255.255.255.255")
